@@ -4,7 +4,7 @@
  * ProActive: The Java(TM) library for Parallel, Distributed,
  *            Concurrent computing with Security and Mobility
  *
- * Copyright (C) 1997-2008 INRIA/University of Nice-Sophia Antipolis
+ * Copyright (C) 1997-2009 INRIA/University of Nice-Sophia Antipolis
  * Contact: proactive@ow2.org
  *
  * This library is free software; you can redistribute it and/or
@@ -147,8 +147,8 @@ public class KernelCG extends Kernel {
             ////////////////////////////////////////////////////////////////////
 
             // Fill the constructor arguments
-            param = new Object[] { problemClass, new Integer(this.npcols), new Integer(this.nprows),
-                    new Integer(this.nzz) };
+            param = new Object[] { problemClass, Integer.valueOf(this.npcols), Integer.valueOf(this.nprows),
+                    Integer.valueOf(this.nzz) };
             params = new Object[this.problemClass.NUM_PROCS][];
             for (i = 0; i < problemClass.NUM_PROCS; i++) {
                 params[i] = param;
