@@ -4,7 +4,7 @@
  * ProActive: The Java(TM) library for Parallel, Distributed,
  *            Concurrent computing with Security and Mobility
  *
- * Copyright (C) 1997-2008 INRIA/University of Nice-Sophia Antipolis
+ * Copyright (C) 1997-2009 INRIA/University of Nice-Sophia Antipolis
  * Contact: proactive@ow2.org
  *
  * This library is free software; you can redistribute it and/or
@@ -157,8 +157,10 @@ public class MulticastControllerImpl extends AbstractCollectiveInterfaceControll
                             serverSideItf);
                     if (serverSideMatchingMethod == null) {
                         throw new IllegalBindingException("binding incompatibility between " +
-                            clientSideItfType.getFcItfName() + " and " + serverSideItfType.getFcItfName() +
-                            " : cannot find matching method");
+                            clientSideItfType.getFcItfName() + " (" + clientSideItfType.getFcItfSignature() +
+                            ") and " + serverSideItfType.getFcItfName() + " (" +
+                            serverSideItfType.getFcItfSignature() +
+                            ") interfaces : cannot find matching method");
                     }
                     matchingMethodsForThisServerItf.put(new SerializableMethod(method),
                             new SerializableMethod(serverSideMatchingMethod));
@@ -471,10 +473,10 @@ public class MulticastControllerImpl extends AbstractCollectiveInterfaceControll
             for (int i = 0; i < serverItfs.length; i++) {
                 Interface curServerItf = serverItfs[i];
                 if (((Group<ProActiveInterface>) clientSideProxy.getDelegatee()).contains(curServerItf))
-                    return new Boolean(true);
+                    return Boolean.valueOf(true);
             }
         }
-        return new Boolean(false);
+        return Boolean.valueOf(false);
     }
 
     private boolean hasClientSideProxy(String itfName) {
