@@ -4,7 +4,7 @@
  * ProActive: The Java(TM) library for Parallel, Distributed,
  *            Concurrent computing with Security and Mobility
  *
- * Copyright (C) 1997-2008 INRIA/University of Nice-Sophia Antipolis
+ * Copyright (C) 1997-2009 INRIA/University of Nice-Sophia Antipolis
  * Contact: proactive@ow2.org
  *
  * This library is free software; you can redistribute it and/or
@@ -73,7 +73,7 @@ public class HttpReply extends HttpMessage implements Serializable {
         try {
             Body body = HttpUtils.getBody(idBody);
             if (this.reply != null) {
-                return new Integer(body.receiveReply(this.reply));
+                return Integer.valueOf(body.receiveReply(this.reply));
             }
         } catch (IOException e) {
             e.printStackTrace();
