@@ -4,7 +4,7 @@
  * ProActive: The Java(TM) library for Parallel, Distributed,
  *            Concurrent computing with Security and Mobility
  *
- * Copyright (C) 1997-2008 INRIA/University of Nice-Sophia Antipolis
+ * Copyright (C) 1997-2009 INRIA/University of Nice-Sophia Antipolis
  * Contact: proactive@ow2.org
  *
  * This library is free software; you can redistribute it and/or
@@ -35,6 +35,8 @@ import java.net.InetAddress;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.UnknownHostException;
+
+import net.sf.saxon.value.IntegerValue;
 
 import org.apache.log4j.Logger;
 import org.objectweb.proactive.core.Constants;
@@ -192,7 +194,7 @@ public class URIBuilder {
         if (port == -1) {
             return buildURI(host, name, protocol);
         } else {
-            return buildURI(host, name, protocol, new Integer(port).intValue());
+            return buildURI(host, name, protocol, Integer.valueOf(port).intValue());
         }
     }
 
