@@ -4,7 +4,7 @@
  * ProActive: The Java(TM) library for Parallel, Distributed,
  *            Concurrent computing with Security and Mobility
  *
- * Copyright (C) 1997-2008 INRIA/University of Nice-Sophia Antipolis
+ * Copyright (C) 1997-2009 INRIA/University of Nice-Sophia Antipolis
  * Contact: proactive@ow2.org
  *
  * This library is free software; you can redistribute it and/or
@@ -57,7 +57,7 @@ public class ActiveDisplay implements ConsumerProducerListener {
         // Active Buffer creation
         try {
             buffer = (BoundedBuffer) org.objectweb.proactive.api.PAActiveObject.newActive(BoundedBuffer.class
-                    .getName(), new Object[] { new Integer(size), o });
+                    .getName(), new Object[] { Integer.valueOf(size), o });
         } catch (Exception e) {
         }
 
