@@ -4,7 +4,7 @@
  * ProActive: The Java(TM) library for Parallel, Distributed,
  *            Concurrent computing with Security and Mobility
  *
- * Copyright (C) 1997-2008 INRIA/University of Nice-Sophia Antipolis
+ * Copyright (C) 1997-2009 INRIA/University of Nice-Sophia Antipolis
  * Contact: proactive@ow2.org
  *
  * This library is free software; you can redistribute it and/or
@@ -215,7 +215,7 @@ public class Main implements ActivePrimeContainerCreator, InitActive {
         }
         ProActiveConfiguration.load();
         Main main = (Main) PAActiveObject.newActive(Main.class.getName(), new Object[] { xmlDescriptor,
-                new Boolean(gui) });
+                Boolean.valueOf(gui) });
     }
 
     /** class for control window. */
