@@ -1,10 +1,11 @@
+//@tutorial-start
 /*
  * ################################################################
  *
  * ProActive: The Java(TM) library for Parallel, Distributed,
  *            Concurrent computing with Security and Mobility
  *
- * Copyright (C) 1997-2008 INRIA/University of Nice-Sophia Antipolis
+ * Copyright (C) 1997-2009 INRIA/University of Nice-Sophia Antipolis
  * Contact: proactive@ow2.org
  *
  * This library is free software; you can redistribute it and/or
@@ -31,6 +32,7 @@
  * $$ACTIVEEON_INITIAL_DEV$$
  */
 //@snippet-start primes_distributedmw_task
+//@snippet-start primes_distributedmw_task_skeleton
 package org.objectweb.proactive.examples.userguide.primes.distributedmw;
 
 import org.objectweb.proactive.extensions.masterworker.interfaces.Task;
@@ -50,16 +52,22 @@ public class FindPrimeTask implements Task<Boolean> {
     private long end;
     private long taskCandidate;
 
-    //TODO 1. Write the constructor for this task 
+    //TODO 1. Write the constructor for this task
     public FindPrimeTask(long taskCandidate, long begin, long end) {
+        //@snippet-break primes_distributedmw_task_skeleton
+        //@tutorial-break
         this.begin = begin;
         this.end = end;
         this.taskCandidate = taskCandidate;
+        //@tutorial-resume
+        //@snippet-resume primes_distributedmw_task_skeleton
     }
 
     //TOOD 2. Fill the code that checks if the taskCandidate
     // is prime. Note that no wrappers are needed !
     public Boolean run(WorkerMemory memory) {
+        //@snippet-break primes_distributedmw_task_skeleton
+        //@tutorial-break
         try {
             Thread.sleep(300);
         } catch (Exception e) {
@@ -67,10 +75,14 @@ public class FindPrimeTask implements Task<Boolean> {
         }
         for (long divider = begin; divider < end; divider++) {
             if ((taskCandidate % divider) == 0) {
-                return new Boolean(false);
+                return Boolean.valueOf(false);
             }
         }
-        return new Boolean(true);
+        //@tutorial-resume
+        //@snippet-resume primes_distributedmw_task_skeleton
+        return Boolean.valueOf(true);
     }
 }
+//@tutorial-end
 //@snippet-end primes_distributedmw_task
+//@snippet-end primes_distributedmw_task_skeleton
