@@ -4,7 +4,7 @@
  * ProActive: The Java(TM) library for Parallel, Distributed,
  *            Concurrent computing with Security and Mobility
  *
- * Copyright (C) 1997-2008 INRIA/University of Nice-Sophia Antipolis
+ * Copyright (C) 1997-2009 INRIA/University of Nice-Sophia Antipolis
  * Contact: proactive@ow2.org
  *
  * This library is free software; you can redistribute it and/or
@@ -108,7 +108,7 @@ public class Util {
             NodeException {
 
         AOInterpreterPool interpool = (AOInterpreterPool) PAActiveObject.newActive(AOInterpreterPool.class
-                .getName(), new Object[] { new Boolean(true) }, frameworknode);
+                .getName(), new Object[] { Boolean.valueOf(true) }, frameworknode);
 
         return interpool;
     }
